--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "obspy>=1.4.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.0",
+    "magma-converter>=1.8.2",
     "numpy>=2.0.0",
     "matplotlib>=3.9.0",
     "peewee>=3.17.6",
