--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name =  "dsar"
-version = "1.2.0"
+version = "1.3.0"
 authors = [
     {name = "Martanto", email = "martanto@live.com"},
     {name = "Corentin Caudron", email = "corentin@ulb.be"},
@@ -15,14 +15,14 @@ license = {file = "LICENSE"}
 keywords = ["seismic", "volcano", "volcanology", "dsar"]
 requires-python = ">=3.11"
 dependencies = [
-    "obspy>=1.4.0",
     "openpyxl>=3.1.5",
     "pandas>=2.2.0",
-    "magma-converter>=1.8.6",
     "numpy>=2.0.0",
     "matplotlib>=3.9.0",
-    "peewee>=3.17.6",
-    "python-slugify>=8.0.0"
+    "python-slugify>=8.0.0",
+    "ipykernel>=7.2.0",
+    "setuptools==80.8.0",
+    "obspy>=1.4.2",
 ]
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -38,8 +38,6 @@ base = [
     "pandas",
     "numpy",
     "matplotlib",
-    "magma-converter",
-    "peewee",
     "python-slugify"
 ]
 
